use .collect(Collectors.toList())