@@ -348,6 +348,6 @@ public class AbiDefinition {
     }
 
     private static List<NamedType> clone(final List<NamedType> from) {
-        return from.stream().map(NamedType::new).toList();
+        return from.stream().map(NamedType::new).collect(Collectors.toList());
     }
 }
